samples/_failures_safe/1761319220_805df8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4ec825d.c: In function ‘main’:
./samples/SAFE/__tmp_b4ec825d.c:142:17: error: expected expression at end of input
  142 |                 if (out_idx2 >
      |                 ^~
./samples/SAFE/__tmp_b4ec825d.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4ec825d.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4ec825d.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4ec825d.c:142:17: error: expected declaration or statement at end of input
